--- a/JS1/Ejercicio 2/index.html
+++ b/JS1/Ejercicio 2/index.html
@@ -6,6 +6,6 @@
     <title>Ejercicio 2</title>
 </head>
 <body>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
